add info about fedmsg.d

--- a/_posts/2017-06-03-today.md
+++ b/_posts/2017-06-03-today.md
@@ -157,3 +157,12 @@ class BaseMessage(object):
     _msg = Column(UnicodeText, nullable=False)
     _headers = Column(UnicodeText)
 ```
+
+### fedmsg.d
+
+One interesting thing is that each of the projects has the `fedmsg.d` dir which where `fedmsg.config` will try to read the config from whenever the fedmsg API is invoked. So, for consuming/producing from/to fedmsg, you will need the dir in the project root. 
+
+The `./fedmsg.d/` is the local settings. `/etc/fedmsg.d/` is the global one.
+
+
+
